* Migrate from synchronized to ReentrantLock's to better utilize virtual threads * Use virtual threads in TFTPServer